# notie

./: .gitignore  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  test.py  tsconfig.json  vercel.json  vite.config.ts
.github/workflows/: lint-format-check.yml  publish.yml  test.yml
assets/pr-100/: playground-render.json
assets/pr-101/: probe.json
assets/pr-102/: aria-snapshot.txt  card-probe.json  focus-probe.json  results.json
assets/pr-103/: after-probe.json  before-probe.json
assets/pr-104/: after-desktop-navbar-aria.txt  after-mobile-menu-open-aria.txt  after-mobile-navbar-aria.txt  before-desktop-navbar-aria.txt  before-mobile-navbar-aria.txt  browser-checks.json
assets/pr-105/: duplicate-id-probe.json
assets/pr-89/: probe-katex.json  probe.json
assets/pr-90/: probe.json
assets/pr-91/: fixture-test.md  probe-script.js  probe.json
assets/pr-92/: review-fixture.md  review-probe.json  test-acceptance-probe.json
assets/pr-93/: probe.json  review-fixture.md
demo-app/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
demo-app/src/: App.tsx  main.tsx  vite-env.d.ts
markdown_processor/: Cargo.toml
markdown_processor/src/: equation_mapping.rs  lib.rs
notes/: algo.md  cso2.md  nlp.md  orgo.md  statml.md  tutorial.md
scripts/: benchmark-notie.tsx
src/: App.tsx  MarkdownProcessor.ts  index.ts  main.tsx  utils.ts
src/__tests__/: ssr.test.tsx
src/components/: Biography.tsx  BlockquoteReference.test.tsx  (+38 more)
(+112 files in other folders)
